Added the ToDoList project

--- a/js/toDoList/index.html
+++ b/js/toDoList/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li>"New" - Add A Todo</li>
         <li>"List" - List All Todos</li>
+        <li>"Delete" - Delete a Specific Item</li>
         <li>"Quit" - Quit App</li>
     </ul>
 
