Updated ScoreKeeper Project

--- a/js/scoreKeeper/index.html
+++ b/js/scoreKeeper/index.html
@@ -12,7 +12,7 @@
 
     <p>Playing to: <span id="playToDisplay">5</span></p>
 
-    <input type="number" name="playTo" id="playTo" placeholder="Playing to 5" min="0">
+    <input type="number" name="playTo" id="playTo" placeholder="Playing to:" min="0" value="5">
     <div class="buttons">
         <button id="player1">Player 1</button>
         <button id="player2">Player 2</button>
