Updated colorGame files

--- a/js/colorGame/index.html
+++ b/js/colorGame/index.html
@@ -10,6 +10,7 @@
 <body>
 	<header>
 		<h1>Color Game</h1>
+		<h3 id="guess">RGB(0, 0, 0)</h3>
 	</header>
 	<div class="container">
 		<div class="card" id="card1"></div>
